--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <div data-animation="default" class="havbar w-nav" data-easing2="ease" data-easing="ease" data-collapse="medium" role="banner" data-no-scroll="1" data-duration="400" data-doc-height="1">
                     <div class="container w-container">
                         <a href="/" aria-label="Return to Home" aria-current="page" class="header-logo w-nav-brand w--current">
-                            <img src="https://cdn.prod.website-files.com/6356be8fbc49e81efdab465e/63597a94c30e32060a18dc3f_Palmless%20logo.png" loading="lazy" width="176.5" alt="Palmless™ logo" class="logo"/>
+                            <img src="https://raw.githubusercontent.com/vulcananarchist/dermat/refs/heads/main/images/Bright%20Colorful%20Playful%20Funny%20Donuts%20Food%20Circle%20Logo.png" loading="lazy" width="176.5" alt="Palmless™ logo" class="logo"/>
                         </a>
                         <nav role="navigation" class="nav-menu w-nav-menu">
                             <a href="/the-palm-problem" aria-label="Go to the The Palm Problem page" class="nav-link w-nav-link">The Palm Problem</a>
