--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </head>
     <body class="body">
         <section data-w-id="e37fade5-c783-3556-8f14-f03b9c66356a" style="display:block;opacity:0" class="loader-module">
-            <img src="https://cdn.prod.website-files.com/6356be8fbc49e81efdab465e/64be9050ce383df47ec191f3_Group%20996.svg" loading="lazy" width="616" alt="Palmless TM logo" class="loader-logo"/>
+            <img src="https://raw.githubusercontent.com/vulcananarchist/dermat/refs/heads/main/images/Bright%20Colorful%20Playful%20Funny%20Donuts%20Food%20Circle%20Logo.png" loading="lazy" width="616" alt="Palmless TM logo" class="loader-logo"/>
         </section>
         <div style="display:none" class="hide-while-loader">
             <div id="popup" class="pop-up-block">
