--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </head>
     <body class="body">
         <section data-w-id="e37fade5-c783-3556-8f14-f03b9c66356a" style="display:block;opacity:0" class="loader-module">
-            <img src="https://raw.githubusercontent.com/vulcananarchist/dermat/refs/heads/main/images/Bright%20Colorful%20Playful%20Funny%20Donuts%20Food%20Circle%20Logo.png" loading="lazy" width="616" alt="Palmless TM logo" class="loader-logo"/>
+            <img src="https://raw.githubusercontent.com/vulcananarchist/dermat/refs/heads/main/images/Bright%20Colorful%20Playful%20Funny%20Donuts%20Food%20Circle%20Logo%20(1).png" loading="lazy" width="616" alt="Palmless TM logo" class="loader-logo"/>
         </section>
         <div style="display:none" class="hide-while-loader">
             <div id="popup" class="pop-up-block">
@@ -78,7 +78,7 @@
                 <div data-animation="default" class="havbar w-nav" data-easing2="ease" data-easing="ease" data-collapse="medium" role="banner" data-no-scroll="1" data-duration="400" data-doc-height="1">
                     <div class="container w-container">
                         <a href="/" aria-label="Return to Home" aria-current="page" class="header-logo w-nav-brand w--current">
-                            <img src="https://raw.githubusercontent.com/vulcananarchist/dermat/refs/heads/main/images/Bright%20Colorful%20Playful%20Funny%20Donuts%20Food%20Circle%20Logo.png" loading="lazy" width="176.5" alt="Palmless™ logo" class="logo"/>
+                            <img src="https://raw.githubusercontent.com/vulcananarchist/dermat/refs/heads/main/images/Bright%20Colorful%20Playful%20Funny%20Donuts%20Food%20Circle%20Logo%20(1).png" loading="lazy" width="176.5" alt="Palmless™ logo" class="logo"/>
                         </a>
                         <nav role="navigation" class="nav-menu w-nav-menu">
                             <a href="/the-palm-problem" aria-label="Go to the The Palm Problem page" class="nav-link w-nav-link">The Palm Problem</a>
