--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                         <a href="https://twitter.com/c16bio" target="_blank" class="social-media-link twitter last-child w-inline-block"></a>
                     </div>
                     <a href="/" aria-current="page" class="footer-main-logo w-inline-block w--current">
-                        <img src="https://cdn.prod.website-files.com/6356be8fbc49e81efdab465e/64b695dccf2b8b7a1731d881_Group%201008.svg" loading="lazy" alt="Dermat AI" width="632" class="main-logo-image"/>
+                        <img src="https://raw.githubusercontent.com/vulcananarchist/dermat/refs/heads/main/images/Bright%20Colorful%20Playful%20Funny%20Donuts%20Food%20Circle%20Logo%20(1).png" loading="lazy" alt="Dermat AI" width="632" class="main-logo-image"/>
                     </a>
                     <p class="p mb-55">
                         Learn more about the makers of Dermat AI at <a href="https://www.c16bio.com/" target="_blank" class="footer-paragraph-link">Dermat_AI.com</a>
