--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         <div class="mobile-menu-button w-nav-button">
                             <div class="icon w-icon-nav-menu"></div>
                         </div>
-                        <a href="https://www.c16bio.com/lol" target="_blank" class="shop-bth w-inline-block">Book a demo</a>
+                        <a href="https://www.c16bio.comlol" target="_blank" class="shop-bth w-inline-block">Book a demo</a>
                     </div>
                 </div>
             </div>
