--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </div>
                 <div data-w-id="ac5e3fce-0bda-8b71-a43c-f5c101adb1ff" class="pop-up-wrapper-2">
                     <a id="close-button" data-w-id="ac5e3fce-0bda-8b71-a43c-f5c101adb200" href="#" class="close-button-2 w-inline-block"></a>
-                    <a id="w-node-ac5e3fce-0bda-8b71-a43c-f5c101adb201-3aa1968a" href="https://www.c16bio.com/lol" target="_blank" class="square w-inline-block"></a>
+                    <a id="w-node-ac5e3fce-0bda-8b71-a43c-f5c101adb201-3aa1968a" href="https://www.lolbio.com/lol" target="_blank" class="square w-inline-block"></a>
                 </div>
             </div>
             <div data-w-id="1c7739c8-0768-5e09-56ed-6401088b6d12" class="header">
@@ -95,12 +95,12 @@
                             </div>
                             <a href="/partner-with-us" aria-label="Go to the Contact page" class="nav-link tablet-mt-30 w-nav-link">Partner with Us</a>
                             <a href="/press-and-awards" aria-label="Go to the Shop page" class="nav-link last-child w-nav-link">Press &amp;Awards</a>
-                            <a href="https://www.c16bio.com/lol" aria-label="Go to the Dermat_AI" class="nav-link only-mobile w-nav-link">Dermat AI</a>
+                            <a href="https://www.lolbio.com/lol" aria-label="Go to the Dermat_AI" class="nav-link only-mobile w-nav-link">Dermat AI</a>
                         </nav>
                         <div class="mobile-menu-button w-nav-button">
                             <div class="icon w-icon-nav-menu"></div>
                         </div>
-                        <a href="https://www.c16bio.comlol" target="_blank" class="shop-bth w-inline-block">Book a demo</a>
+                        <a href="https://www.lolbio.comlol" target="_blank" class="shop-bth w-inline-block">Book a demo</a>
                     </div>
                 </div>
             </div>
@@ -264,13 +264,13 @@
                     <div class="social-media-list">
                         <a href="https://www.instagram.com/gopalmless/lol" target="_blank" class="social-media-link inst w-inline-block"></a>
                         <a href="https://www.linkedin.com/company/lol" target="_blank" class="social-media-link linkedin w-inline-block"></a>
-                        <a href="https://twitter.com/c16bio/lol" target="_blank" class="social-media-link twitter last-child w-inline-block"></a>
+                        <a href="https://twitter.com/lolbio/lol" target="_blank" class="social-media-link twitter last-child w-inline-block"></a>
                     </div>
                     <a href="/" aria-current="page" class="footer-main-logo w-inline-block w--current">
                         <img src="https://raw.githubusercontent.com/vulcananarchist/dermat/refs/heads/main/images/Bright%20Colorful%20Playful%20Funny%20Donuts%20Food%20Circle%20Logo%20(1).png" loading="lazy" alt="Dermat AI" width="632" class="main-logo-image"/>
                     </a>
                     <p class="p mb-55">
-                        Learn more about the makers of Dermat AI at <a href="https://www.c16bio.com/lol" target="_blank" class="footer-paragraph-link">Dermat_AI.com</a>
+                        Learn more about the makers of Dermat AI at <a href="https://www.lolbio.com/lol" target="_blank" class="footer-paragraph-link">Dermat_AI.com</a>
                     </p>
                     <a href="/partner-with-us" class="button-update-vw w-button">Contact us</a>
                     <div class="footer-bottom">
