--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <!-- Last Published: Thu May 16 2024 21:58:32 GMT+0000 (Coordinated Universal Time) -->
-<html data-wf-domain="www.gopalmless.com" data-wf-page="6508c7a86297c8c38c57d383" data-wf-site="6356be8fbc49e81efdab465e" lang="en">
+<html data-wf-domain="www.gololl.com" data-wf-page="6508c7a86297c8c38c57d383" data-wf-site="6356be8fbc49e81efdab465e" lang="en">
     <head>
         <meta charset="utf-8"/>
         <title>Dermat AI - Dermatology for All</title>
         <meta content="Non-inclusive dermatology doesn&#x27;t need to be a problem. We&#x27;re building a better way." name="description"/>
         <meta content="Dermat AI - Dermatology for All" property="og:title"/>
         <meta content="Non-inclusive dermatology doesn&#x27;t need to be a problem. We&#x27;re building a better way" property="og:description"/>
-        <meta content="https://cdn.prod.website-files.com/6356be8fbc49e81efdab465e/635c298ba473924f53236626_Palmless-homepage-hero.jpg" property="og:image"/>
+        <meta content="https://cdn.prod.website-files.com/6356be8fbc49e81efdab465e/635c298ba473924f53236626_loll-homepage-hero.jpg" property="og:image"/>
         <meta content="Dermat AI - Dermatology for All" property="twitter:title"/>
         <meta content="Non-inclusive dermatology doesn&#x27;t need to be a problem. We&#x27;re building a better way" property="twitter:description"/>
-        <meta content="https://cdn.prod.website-files.com/6356be8fbc49e81efdab465e/635c298ba473924f53236626_Palmless-homepage-hero.jpg" property="twitter:image"/>
+        <meta content="https://cdn.prod.website-files.com/6356be8fbc49e81efdab465e/635c298ba473924f53236626_loll-homepage-hero.jpg" property="twitter:image"/>
         <meta property="og:type" content="website"/>
         <meta content="summary_large_image" name="twitter:card"/>
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
-        <link href="https://assets-global.website-files.com/6356be8fbc49e81efdab465e/css/palmless.webflow.134307469.min.css" rel="stylesheet" type="text/css"/>
+        <link href="https://assets-global.website-files.com/6356be8fbc49e81efdab465e/css/loll.webflow.134307469.min.css" rel="stylesheet" type="text/css"/>
         <script type="text/javascript">
             !function(o, c) {
                 var n = c.documentElement
@@ -24,8 +24,8 @@
             }(window, document);
         </script>
         <link href="https://cdn.prod.website-files.com/6356be8fbc49e81efdab465e/638f906e4b77f1c7e3ea289a_Frame%2074.png" rel="shortcut icon" type="image/x-icon"/>
-        <link href="https://cdn.prod.website-files.com/6356be8fbc49e81efdab465e/6356e4aacb7589549f41e553_Palmless%20WebClip.png" rel="apple-touch-icon"/>
-        <link href="https://www.gopalmless.com/" rel="canonical"/>
+        <link href="https://cdn.prod.website-files.com/6356be8fbc49e81efdab465e/6356e4aacb7589549f41e553_loll%20WebClip.png" rel="apple-touch-icon"/>
+        <link href="https://www.gololl.com/" rel="canonical"/>
         <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-SQK5MQ2BKE"></script>
         <script type="text/javascript">
             window.dataLayer = window.dataLayer || [];
@@ -41,11 +41,11 @@
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <!--js-cookie library -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.2.1/js.cookie.min.js"></script>
-        <meta property="og:url" content="https://www.gopalmless.com"/>
+        <meta property="og:url" content="https://www.gololl.com"/>
     </head>
     <body class="body">
         <section data-w-id="e37fade5-c783-3556-8f14-f03b9c66356a" style="display:block;opacity:0" class="loader-module">
-            <img src="https://raw.githubusercontent.com/vulcananarchist/dermat/refs/heads/main/images/Bright%20Colorful%20Playful%20Funny%20Donuts%20Food%20Circle%20Logo%20(1).png" loading="lazy" width="616" alt="Palmless TM logo" class="loader-logo"/>
+            <img src="https://raw.githubusercontent.com/vulcananarchist/dermat/refs/heads/main/images/Bright%20Colorful%20Playful%20Funny%20Donuts%20Food%20Circle%20Logo%20(1).png" loading="lazy" width="616" alt="loll TM logo" class="loader-logo"/>
         </section>
         <div style="display:none" class="hide-while-loader">
             <div id="popup" class="pop-up-block">
@@ -66,7 +66,7 @@
                             AI powered diagnostic tool for detecting skin conditions for all skintones.<br/>
                             <br/>Dermat AI
                         </div>
-                        <a href="http://shop.gopalmless.com" class="button order-now w-button">Order now!</a>
+                        <a href="http://shop.gololl.com" class="button order-now w-button">Order now!</a>
                     </div>
                 </div>
                 <div data-w-id="ac5e3fce-0bda-8b71-a43c-f5c101adb1ff" class="pop-up-wrapper-2">
@@ -78,7 +78,7 @@
                 <div data-animation="default" class="havbar w-nav" data-easing2="ease" data-easing="ease" data-collapse="medium" role="banner" data-no-scroll="1" data-duration="400" data-doc-height="1">
                     <div class="container w-container">
                         <a href="/" aria-label="Return to Home" aria-current="page" class="header-logo w-nav-brand w--current">
-                            <img src="https://raw.githubusercontent.com/vulcananarchist/dermat/refs/heads/main/images/Bright%20Colorful%20Playful%20Funny%20Donuts%20Food%20Circle%20Logo%20(1).png" loading="lazy" width="176.5" alt="Palmless™ logo" class="logo"/>
+                            <img src="https://raw.githubusercontent.com/vulcananarchist/dermat/refs/heads/main/images/Bright%20Colorful%20Playful%20Funny%20Donuts%20Food%20Circle%20Logo%20(1).png" loading="lazy" width="176.5" alt="loll™ logo" class="logo"/>
                         </a>
                         <nav role="navigation" class="nav-menu w-nav-menu">
                             <a href="/the-palm-problem" aria-label="Go to the The Inequity Problem page" class="nav-link w-nav-link">The Equity Problem</a>
@@ -88,7 +88,7 @@
                                 </div>
                                 <nav class="menu-dropdown-list w-dropdown-list">
                                     <a href="/torula-oil" class="nav-link nav-link-dropdown w-dropdown-link">Beauty’s Super Ingredient</a>
-                                    <a href="http://shop.gopalmless.com" class="nav-link nav-link-dropdown w-dropdown-link">Shop</a>
+                                    <a href="http://shop.gololl.com" class="nav-link nav-link-dropdown w-dropdown-link">Shop</a>
                                     <a href="/collaborations" class="nav-link nav-link-dropdown w-dropdown-link">Collaborations</a>
                                     <a href="/potential" class="nav-link nav-link-dropdown last-child w-dropdown-link">Food &amp;Personal Care</a>
                                 </nav>
@@ -107,10 +107,10 @@
             <div class="empty-block"></div>
             <section class="section hero-section">
                 <div class="wrapper">
-                    <div data-poster-url="https://cdn.prod.website-files.com/6356be8fbc49e81efdab465e/64b6b2dab8905dea6de515e2_Palmless - Homepage-poster-00001.jpg" data-video-urls="https://cdn.prod.website-files.com/6356be8fbc49e81efdab465e/64b6b2dab8905dea6de515e2_Palmless - Homepage-transcode.mp4,https://cdn.prod.website-files.com/6356be8fbc49e81efdab465e/64b6b2dab8905dea6de515e2_Palmless - Homepage-transcode.webm" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="video small-padding w-background-video w-background-video-atom">
-                        <video id="eec434e3-e7da-c260-4a17-83b54e5162d7-video" autoplay="" loop="" style="background-image:url(&quot;https://cdn.prod.website-files.com/6356be8fbc49e81efdab465e/64b6b2dab8905dea6de515e2_Palmless - Homepage-poster-00001.jpg&quot;)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
-                            <source src="https://cdn.prod.website-files.com/6356be8fbc49e81efdab465e/64b6b2dab8905dea6de515e2_Palmless - Homepage-transcode.mp4" data-wf-ignore="true"/>
-                            <source src="https://cdn.prod.website-files.com/6356be8fbc49e81efdab465e/64b6b2dab8905dea6de515e2_Palmless - Homepage-transcode.webm" data-wf-ignore="true"/>
+                    <div data-poster-url="https://cdn.prod.website-files.com/6356be8fbc49e81efdab465e/64b6b2dab8905dea6de515e2_loll - Homepage-poster-00001.jpg" data-video-urls="https://cdn.prod.website-files.com/6356be8fbc49e81efdab465e/64b6b2dab8905dea6de515e2_loll - Homepage-transcode.mp4,https://cdn.prod.website-files.com/6356be8fbc49e81efdab465e/64b6b2dab8905dea6de515e2_loll - Homepage-transcode.webm" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="video small-padding w-background-video w-background-video-atom">
+                        <video id="eec434e3-e7da-c260-4a17-83b54e5162d7-video" autoplay="" loop="" style="background-image:url(&quot;https://cdn.prod.website-files.com/6356be8fbc49e81efdab465e/64b6b2dab8905dea6de515e2_loll - Homepage-poster-00001.jpg&quot;)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
+                            <source src="https://cdn.prod.website-files.com/6356be8fbc49e81efdab465e/64b6b2dab8905dea6de515e2_loll - Homepage-transcode.mp4" data-wf-ignore="true"/>
+                            <source src="https://cdn.prod.website-files.com/6356be8fbc49e81efdab465e/64b6b2dab8905dea6de515e2_loll - Homepage-transcode.webm" data-wf-ignore="true"/>
                         </video>
                         <h1 class="h1-acid noselect homepage">Inclusive dermatology for all skin</h1>
                     </div>
@@ -262,7 +262,7 @@
             <section class="footer-update">
                 <div class="wrapper wrapper-center">
                     <div class="social-media-list">
-                        <a href="https://www.instagram.com/gopalmless/lol" target="_blank" class="social-media-link inst w-inline-block"></a>
+                        <a href="https://www.instagram.com/gololl/lol" target="_blank" class="social-media-link inst w-inline-block"></a>
                         <a href="https://www.linkedin.com/company/lol" target="_blank" class="social-media-link linkedin w-inline-block"></a>
                         <a href="https://twitter.com/lolbio/lol" target="_blank" class="social-media-link twitter last-child w-inline-block"></a>
                     </div>
