--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </head>
     <body class="body">
         <section data-w-id="e37fade5-c783-3556-8f14-f03b9c66356a" style="display:block;opacity:0" class="loader-module">
-            <img src="https://raw.githubusercontent.com/vulcananarchist/dermat/refs/heads/main/images/Bright%20Colorful%20Playful%20Funny%20Donuts%20Food%20Circle%20Logo%20(1).png" loading="lazy" width="616" alt="loll TM logo" class="loader-logo"/>
+            <img src="https://raw.githubusercontent.com/vulcananarchist/dermat/refs/heads/main/images/Bright%20Colorful%20Playful%20Funny%20Donuts%20dermatology%20Circle%20Logo%20(1).png" loading="lazy" width="616" alt="loll TM logo" class="loader-logo"/>
         </section>
         <div style="display:none" class="hide-while-loader">
             <div id="popup" class="pop-up-block">
@@ -78,7 +78,7 @@
                 <div data-animation="default" class="havbar w-nav" data-easing2="ease" data-easing="ease" data-collapse="medium" role="banner" data-no-scroll="1" data-duration="400" data-doc-height="1">
                     <div class="container w-container">
                         <a href="/" aria-label="Return to Home" aria-current="page" class="header-logo w-nav-brand w--current">
-                            <img src="https://raw.githubusercontent.com/vulcananarchist/dermat/refs/heads/main/images/Bright%20Colorful%20Playful%20Funny%20Donuts%20Food%20Circle%20Logo%20(1).png" loading="lazy" width="176.5" alt="loll™ logo" class="logo"/>
+                            <img src="https://raw.githubusercontent.com/vulcananarchist/dermat/refs/heads/main/images/Bright%20Colorful%20Playful%20Funny%20Donuts%20dermatology%20Circle%20Logo%20(1).png" loading="lazy" width="176.5" alt="loll™ logo" class="logo"/>
                         </a>
                         <nav role="navigation" class="nav-menu w-nav-menu">
                             <a href="/the-palm-problem" aria-label="Go to the The Inequity Problem page" class="nav-link w-nav-link">The Equity Problem</a>
@@ -90,7 +90,7 @@
                                     <a href="/torula-oil" class="nav-link nav-link-dropdown w-dropdown-link">Beauty’s Super Ingredient</a>
                                     <a href="http://shop.gololl.com" class="nav-link nav-link-dropdown w-dropdown-link">Shop</a>
                                     <a href="/collaborations" class="nav-link nav-link-dropdown w-dropdown-link">Collaborations</a>
-                                    <a href="/potential" class="nav-link nav-link-dropdown last-child w-dropdown-link">Food &amp;Personal Care</a>
+                                    <a href="/potential" class="nav-link nav-link-dropdown last-child w-dropdown-link">dermatology &amp;Personal Care</a>
                                 </nav>
                             </div>
                             <a href="/partner-with-us" aria-label="Go to the Contact page" class="nav-link tablet-mt-30 w-nav-link">Partner with Us</a>
@@ -267,7 +267,7 @@
                         <a href="https://twitter.com/lolbio/lol" target="_blank" class="social-media-link twitter last-child w-inline-block"></a>
                     </div>
                     <a href="/" aria-current="page" class="footer-main-logo w-inline-block w--current">
-                        <img src="https://raw.githubusercontent.com/vulcananarchist/dermat/refs/heads/main/images/Bright%20Colorful%20Playful%20Funny%20Donuts%20Food%20Circle%20Logo%20(1).png" loading="lazy" alt="Dermat AI" width="632" class="main-logo-image"/>
+                        <img src="https://raw.githubusercontent.com/vulcananarchist/dermat/refs/heads/main/images/Bright%20Colorful%20Playful%20Funny%20Donuts%20dermatology%20Circle%20Logo%20(1).png" loading="lazy" alt="Dermat AI" width="632" class="main-logo-image"/>
                     </a>
                     <p class="p mb-55">
                         Learn more about the makers of Dermat AI at <a href="https://www.lolbio.com/lol" target="_blank" class="footer-paragraph-link">Dermat_AI.com</a>
