--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                             <img src="https://raw.githubusercontent.com/vulcananarchist/dermat/refs/heads/main/images/Bright%20Colorful%20Playful%20Funny%20Donuts%20Food%20Circle%20Logo%20(1).png" loading="lazy" width="176.5" alt="Palmless™ logo" class="logo"/>
                         </a>
                         <nav role="navigation" class="nav-menu w-nav-menu">
-                            <a href="/the-palm-problem" aria-label="Go to the The Equity Problem page" class="nav-link w-nav-link">The Palm Problem</a>
+                            <a href="/the-palm-problem" aria-label="Go to the The Equity Problem page" class="nav-link w-nav-link">The Equity Problem</a>
                             <a href="/the-palm-problem" aria-label="Go to the The Inequity Problem page" class="nav-link w-nav-link">The Palm Problem</a>
                             <div data-hover="true" data-delay="0" class="dropdown-2 w-dropdown">
                                 <div class="nav-link no-margin-right w-dropdown-toggle">
