--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
             <section class="footer-update">
                 <div class="wrapper wrapper-center">
                     <div class="social-media-list">
-                        <a href="https://www.instagram.com/gopalmless/" target="_blank" class="social-media-link inst w-inline-block"></a>
+                        <a href="https://www.instagram.com/lol/" target="_blank" class="social-media-link inst w-inline-block"></a>
                         <a href="https://www.linkedin.com/company/lol" target="_blank" class="social-media-link linkedin w-inline-block"></a>
                         <a href="https://twitter.com/lol" target="_blank" class="social-media-link twitter last-child w-inline-block"></a>
                     </div>
