--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                                 </a>
                             </div>
                             <div role="listitem" class="press-tile-item w-dyn-item">
-                                <a data-w-id="2e21dc5b-0433-df2d-fb96-ec950246aeed" href="https://www.fastcompany.com/90878755/lol-palmless-?partner=rss&amp;utm_source=rss&amp;utm_medium=feed&amp;utm_campaign=rss+fastcompany&amp;utm_content=rss" target="_blank" class="press-tile-link-block w-inline-block">
+                                <a data-w-id="2e21dc5b-0433-df2d-fb96-ec950246aeed" href="https://www.lol.company.com/90878755/lol-palmless-?partner=rss&amp;utm_source=rss&amp;utm_medium=feed&amp;utm_campaign=rss+lol&amp;utm_content=rss" target="_blank" class="press-tile-link-block w-inline-block">
                                     <div class="press-tile-content">
                                         <div class="title-heading-block">
                                             <div>
